--- a/insightcare-backend/requirements.txt
+++ b/insightcare-backend/requirements.txt
@@ -28,3 +28,18 @@ pytest-cov==4.1.0
 
 # Logging
 structlog==24.1.0
+
+# Machine Learning - Classical Models
+scikit-learn==1.3.0
+xgboost==2.0.0
+pandas==2.0.0
+numpy==1.24.0
+joblib==1.3.2
+
+# Machine Learning - Quantum Models
+qiskit==0.44.0
+qiskit-machine-learning==0.7.0
+
+# Visualization
+matplotlib==3.7.1
+seaborn==0.12.2
