--- a/insightcare-backend/requirements.txt
+++ b/insightcare-backend/requirements.txt
@@ -30,16 +30,16 @@ pytest-cov==4.1.0
 structlog==24.1.0
 
 # Machine Learning - Classical Models
-scikit-learn==1.3.0
-xgboost==2.0.0
-pandas==2.0.0
-numpy==1.24.0
-joblib==1.3.2
+scikit-learn>=1.2.0
+xgboost>=2.0.0
+pandas>=2.0.0
+numpy>=1.24.0,<2.0.0
+joblib>=1.3.0
 
-# Machine Learning - Quantum Models
-qiskit==0.44.0
-qiskit-machine-learning==0.7.0
+# Machine Learning - Quantum Models  
+qiskit>=0.44.0
+qiskit-machine-learning>=0.7.0
 
 # Visualization
-matplotlib==3.7.1
-seaborn==0.12.2
+matplotlib>=3.7.0
+seaborn>=0.12.0
