--- a/insightcare-backend/requirements.txt
+++ b/insightcare-backend/requirements.txt
@@ -1,62 +1,46 @@
-# Core FastAPI Stack - Production Ready
-fastapi==0.104.1
-uvicorn[standard]==0.24.0
-pydantic==2.5.0
-pydantic-settings==2.1.0
-
-# Database - PostgreSQL
-sqlalchemy==2.0.23
+fastapi==0.109.0
+uvicorn[standard]==0.22.0
+sqlalchemy==2.0.31
+psycopg[binary]==3.2.3
 psycopg2-binary==2.9.9
-alembic==1.13.0
-
-# Authentication & Security
+pydantic==2.8.2
 python-jose[cryptography]==3.3.0
 passlib[bcrypt]==1.7.4
-cryptography==41.0.7
-python-dotenv==1.0.0
-
-# HTTP & Utilities
+python-dotenv==1.0.1
 python-multipart==0.0.6
-google-auth==2.25.2
-requests==2.31.0
+alembic==1.13.1
+google-auth==2.23.0
+requests==2.32.5
+
+# Email functionality
+python-dotenv==1.0.1
 aiosmtplib==3.0.1
-email-validator==2.1.0.post1
+email-validator==2.1.0
 
-# Rate Limiting & Logging
+# Rate limiting
 slowapi==0.1.9
-structlog==23.2.0
 
-# Testing Framework
+# Testing
 pytest==7.4.3
 pytest-asyncio==0.21.1
-httpx==0.25.2
+httpx<0.28  # Version 0.28+ has breaking changes with TestClient
 pytest-cov==4.1.0
 
-# Scientific Computing Foundation (use versions with pre-built wheels)
-numpy==1.24.3
-scipy==1.10.1
-pandas==2.0.3
+# Logging
+structlog==24.1.0
 
 # Machine Learning - Classical Models
-scikit-learn==1.3.0
-xgboost==1.7.6
+numpy==1.26.4
+scipy==1.11.4
+scikit-learn==1.3.2
+xgboost==2.0.3
+pandas==2.1.4
 joblib==1.3.2
 
-# Machine Learning - Quantum Computing Stack
-qiskit==0.44.3
-qiskit-aer==0.12.2
+# Machine Learning - Quantum Models  
+qiskit==0.44.0
 qiskit-machine-learning==0.7.0
 
-# Quantum Dependencies
-rustworkx==0.13.2
-sympy==1.12
-dill==0.3.7
-
-# Data Visualization
-matplotlib==3.8.2
+# Visualization
+matplotlib==3.7.1
 seaborn==0.13.0
-
-# Additional Required Dependencies
-typing-extensions==4.9.0
-python-dateutil==2.8.2
-pytz==2023.3
